2011-09-09  Hao Zheng  <zhenghao@chromium.org>

        [chromium] Implement DRT support for Android.
        https://bugs.webkit.org/show_bug.cgi?id=67590

        Reviewed by Tony Chang.

        Add 2 mechanism to make DRT interaction more robust on Android:
        - Send 'QUIT' to DRT to make it stop.
        - Wait until receiving '#READY' from DRT, so that DRT won't miss any
        input commands before it starts.
        And LayoutTestController.cpp needs to include <cctype> for 'tolower'
        and <clocale> for 'LC_ALL' to compile on Android.

        Also change to use sigaction instead of signal for TestShellGtk.cpp,
        as signal() man page recommends using sigaction().

        * DumpRenderTree/DumpRenderTree.gypi:
        * DumpRenderTree/chromium/DumpRenderTree.cpp:
        (main):
        * DumpRenderTree/chromium/LayoutTestController.cpp:
        * DumpRenderTree/chromium/TestShellAndroid.cpp: Added.
        (AlarmHandler):
        (TestShell::waitTestFinished):
        (platformInit):
        (openStartupDialog):
        (checkLayoutTestSystemDependencies):
        * DumpRenderTree/chromium/TestShellGtk.cpp:
        (AlarmHandler):
        (TestShell::waitTestFinished):

2011-09-09  Kevin Ollivier  <kevino@theolliviers.com>

        [wx] Unreviewed build fix. Add Source/JavaScriptCore/dfg directory to the build.

        * waf/build/settings.py:

2011-09-09  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r94851.
        http://trac.webkit.org/changeset/94851
        https://bugs.webkit.org/show_bug.cgi?id=67847

        It broke a webkitpy test (Requested by ossy on #webkit).

        * Scripts/webkitpy/layout_tests/controllers/manager.py:

2011-09-09  Kristóf Kosztyó  <kkristof@inf.u-szeged.hu>

        [NRWT] the nrwt check httpd with --no-http option
        https://bugs.webkit.org/show_bug.cgi?id=67835

        Reviewed by Csaba Osztrogonác.

        * Scripts/webkitpy/layout_tests/controllers/manager.py:
