@@ -1,3 +1,13 @@
+2011-09-09  Kristóf Kosztyó  <kkristof@inf.u-szeged.hu>
+
+        [NRWT] the nrwt check httpd with --no-http option
+        https://bugs.webkit.org/show_bug.cgi?id=67835
+
+        Reviewed by Tony Chang.
+
+        * Scripts/webkitpy/layout_tests/controllers/manager.py:
+        * Scripts/webkitpy/layout_tests/controllers/manager_unittest.py:
+
 2011-09-09  Hao Zheng  <zhenghao@chromium.org>
 
         [chromium] Implement DRT support for Android.
